<resources>
    <string name="app_name">ScreenRecord</string>

    <string name="config">Configure</string>

    <string name="network_useless">Network error, please retry.</string>
    <string name="no_data">No data</string>
    <string name="refresh_at">Updated at</string>
    <string name="video_config">Video settings</string>
    <string name="video_encoder">Video coding</string>
    <string name="resolution">Resolution</string>
    <string name="bitrate">Bit rate码率(kbps)</string>
    <string name="framerate">Frame rate(fps)</string>
    <string name="iframe_interval">Frame interval</string>
    <string name="avc_profile">AVC Profile</string>
    <string name="orientation">orientation</string>
    <string name="audio_config">Audio settings</string>
    <string name="audio_codec">Audio coding</string>
    <string name="audio_channel_count">channels</string>
    <string name="sample_rate">Sample rate</string>
    <string name="audio_bitrate">Bit rate</string>
    <string name="aac_profile">AAC Profile</string>
    <string name="request_permission">The microphone recording will be used, and the video file will be saved with the storage control.</string>
    <string name="no_permission">No permission</string>
    <string name="no_options">no options</string>
    <string name="default_option">(default)</string>
    <string name="enable_audio">Audio enabled</string>
    <string name="settings">setting</string>
    <string name="file_not_exits">File not exist</string>

    <string name="delete">Delete</string>
    <string name="select_all">All</string>
    <string name="rename">Rename</string>
    <string name="please_input_filename">Please input a new name.</string>
    <string name="rename_failed">Rename failed</string>
    <string name="sure_delete">Are you sure to delete?</string>
    <string name="share_to">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>

    <string name="your_input">Write your feedback</string>
    <string name="select_image">+ Add Screenshot</string>
    <string name="send_feedback">Send</string>
    <string name="send_feedback_two">Send Feedback</string>

    <string name="info_fedback_legal_start">"Your "</string>
    <string name="info_fedback_legal_system_info">"system info "</string>
    <string name="info_fedback_legal_and">"and "</string>
    <string name="info_fedback_legal_log_data">"log data "</string>
    <string name="info_fedback_legal_will_be_sent">will be sent to %s</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="click_again">Click again to change the image</string>
    <string name="feedback_mail_subject">feedback about %1$s</string>
    <string name="please_write">Please write something.</string>

    <string name="need_permisson">This function needs the following permissions: </string>
    <string name="open_permission">Open</string>

    <string name="help_developer">Help developers</string>
    <string name="reward_reason">本开发团队致力于开发无广告、无推送、纯净的录屏应用。\n无任何盈利的应用很难开发维护下去，</string>

    <string name="about_us">About us</string>
    <string name="app_description">Welcome to use ScreenRecord. \n If you have any comments or suggestions, please let us know on the feedback page. We will deal with them in time and give you a reply. \n Thank you for your support!</string>
    <string name="search">Search</string>
    <string name="video_edit">Video Edit</string>
    <string name="jianqie">EditVideo</string>
    <string name="need_overlay_permission">Screen recording requires suspended window privileges</string>
	<string name="select_edit_type">点击右上角菜单选择编辑方式</string>
    <string name="preview">预览</string>
    <string name="clip">剪切</string>
    <string name="select_picture">选择图片</string>
	<string name="insert">插入</string>
	<string name="choose_video_to_save">选择一段视频保留</string>
    <string name="choose_video_to_delete">选择一段视频删除</string>
    <string name="background">背景</string>
    <string name="choose_img_as_bg">更改视频背景</string>

</resources>
