<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetStart="0dp">

            <ImageView
                    android:id="@+id/back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:background="?android:selectableItemBackground" />

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black_color_aa"
                    android:typeface="sans"
                    android:textSize="18sp"
                    android:text="@string/settings" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                    android:id="@+id/media_format_chooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                        style="?android:attr/titleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/video_config"
                        android:textColor="@color/accent" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/video_codec"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsIcon="@drawable/ic_video_code"
                        app:optionsTitle="@string/video_encoder" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/resolution"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsEntry="@array/video_resolutions"
                        app:optionsIcon="@drawable/ic_resolution"
                        app:optionsTitle="@string/resolution" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/video_bitrate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="6"
                        app:optionsEntry="@array/video_bitrates"
                        app:optionsIcon="@drawable/ic_video_bitrate"
                        app:optionsTitle="@string/bitrate" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/framerate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="1"
                        app:optionsEntry="@array/video_framerates"
                        app:optionsIcon="@drawable/ic_framrate"
                        app:optionsTitle="@string/framerate" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/iframe_interval"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsEntry="@array/iframeintervals"
                        app:optionsIcon="@drawable/ic_framrate_interval"
                        app:optionsTitle="@string/iframe_interval" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/avc_profile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsIcon="@drawable/ic_setting"
                        app:optionsTitle="@string/avc_profile" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/orientation"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsEntry="@array/orientations"
                        app:optionsIcon="@drawable/ic_screen_rotation"
                        app:optionsTitle="@string/orientation" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <TextView
                        style="?android:attr/titleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/audio_config"
                        android:textColor="@color/accent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp">

                    <ImageView
                            android:id="@+id/icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_audio"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="16dp"
                            android:gravity="center_vertical"
                            android:text="@string/enable_audio"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/icon"
                            app:layout_constraintTop_toTopOf="parent" />

                    <com.suke.widget.SwitchButton
                            android:id="@+id/with_audio"
                            android:layout_width="48dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="8dp"
                            android:checked="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/audio_codec"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsIcon="@drawable/ic_audio_code"
                        app:optionsTitle="@string/audio_codec" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/audio_channel_count"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="1"
                        app:optionsEntry="@array/audio_channels"
                        app:optionsIcon="@drawable/ic_channel"
                        app:optionsTitle="@string/audio_channel_count" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/sample_rate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="7"
                        app:optionsIcon="@drawable/ic_audio_sample"
                        app:optionsTitle="@string/sample_rate" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/audio_bitrate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="2"
                        app:optionsIcon="@drawable/ic_video_bitrate"
                        app:optionsTitle="@string/audio_bitrate" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_light_dividers" />

                <com.bing.example.widget.SettingSelectView
                        android:id="@+id/aac_profile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        app:optionsDefault="0"
                        app:optionsIcon="@drawable/ic_setting"
                        app:optionsTitle="@string/aac_profile" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

