<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="?android:selectableItemBackground" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black_color_aa"
                android:typeface="sans"
                android:textSize="18sp"
                android:text="@string/feedback" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty"
                    android:layout_marginEnd="@dimen/margin_thirty"
                    android:layout_marginTop="20dp"
                    android:gravity="top|start"
                    android:hint="@string/your_input"
                    android:minLines="5"
                    android:background="@drawable/shape_rectangle"
                    android:padding="12dp"/>


                <FrameLayout
                    android:id="@+id/selectImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/margin_thirty"
                    android:layout_marginEnd="@dimen/margin_thirty"
                    android:layout_marginTop="@dimen/margin_thirty"
                    android:background="@color/grey">

                    <ImageView
                        android:id="@+id/selectedImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:id="@+id/selectContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_image"
                            android:gravity="center_vertical"
                            android:textSize="20sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_image" />

                    </LinearLayout>


                </FrameLayout>

                <TextView
                    android:id="@+id/info_legal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_thirty_two"
                    android:layout_marginRight="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_thirty_two" />

                <Button
                    android:id="@+id/submitSuggestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_thirty"
                    android:text="@string/send_feedback"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
